--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/chart/instrument-data.chart.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/chart/instrument-data.chart.scss
@@ -21,7 +21,8 @@
 //=============================================================================
 
 .left-layout {
-  width: 320px;
+  width: 300px;
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -66,6 +67,12 @@
 
 .instrTable-layout {
   flex: 1 1 auto;
+  overflow: auto;
+}
+
+//=============================================================================
+
+.chart-style {
   overflow: auto;
 }
 
