--- a/src/styles/material.scss
+++ b/src/styles/material.scss
@@ -12,27 +12,25 @@
 
 //=============================================================================
 
-$app-primary: mat.define-palette(mat.$indigo-palette, 500);
-$app-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$app-warn:    mat.define-palette(mat.$red-palette);
-
-//=============================================================================
-
-$app-theme: mat.define-light-theme((
+$app-theme: mat.define-theme((
   color: (
-    primary: $app-primary,
-    accent:  $app-accent,
-    warn:    $app-warn,
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
   ),
-  typography: mat.define-typography-config(),
-  density: 0,
+  typography: (
+    brand-family: 'Comic Sans',
+    bold-weight: 900
+  ),
+  density: (
+    scale: 0
+  )
 ));
 
 //=============================================================================
 
-@include mat.core-theme  ($app-theme);
-@include mat.button-theme($app-theme);
-@include mat.select-theme($app-theme);
-@include mat.private-form-field-density($app-theme);
+:root {
+  @include mat.all-component-themes($app-theme);
+}
 
 //=============================================================================
