--- a/src/app/layout/header-panel/header-panel.html
+++ b/src/app/layout/header-panel/header-panel.html
@@ -6,11 +6,14 @@
   <span>{{loc('title')}}</span>
   <span class="spacer"></span>
 
+  <div [hidden]="spinnerHidden">
+    <svg width="24" height="24" viewBox="0 0 24 24">
+      <style>.spinner_0XTQ{transform-origin:center;animation:spinner_y6GP .75s linear infinite}@keyframes spinner_y6GP{100%{transform:rotate(360deg)}}</style>
+      <path class="spinner_0XTQ" d="M12,23a9.63,9.63,0,0,1-8-9.5,9.51,9.51,0,0,1,6.79-9.1A1.66,1.66,0,0,0,12,2.81h0a1.67,1.67,0,0,0-1.94-1.64A11,11,0,0,0,12,23Z"/>
+    </svg>
+  </div>
+
   <button mat-icon-button class="example-icon">
-    <mat-icon>share</mat-icon>
+    <mat-icon>person</mat-icon>
   </button>
-  <!--	<hpe-notification-button tbRight></hpe-notification-button>-->
-  <!--	<hpe-user-button         tbRight>-->
-  <!--        <div class="userPanel">{{loc('userDetails')}}</div>-->
-  <!--    </hpe-user-button>-->
 </mat-toolbar>
