--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/chart/instrument-data.chart.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/chart/instrument-data.chart.scss
@@ -13,7 +13,7 @@
   justify-content: flex-start;
   align-items: stretch;
   gap: 16px;
-  height   : 100%;
+  height: 100%;
   overflow: hidden;
   padding: 0 8px 0 8px;
 }
@@ -35,7 +35,14 @@
 //=============================================================================
 
 .center-layout {
-  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 //=============================================================================
@@ -45,7 +52,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  align-items: baseline;
+  align-items: center;
   gap: 16px;
 }
 
@@ -58,9 +65,8 @@
 //=============================================================================
 
 .chart-layout {
-  //  flex: 1 1 auto;
-  width: 100%;
-  height: 100%;
+  flex: 1 1 auto;
+  overflow: auto;
 }
 
 //=============================================================================
@@ -72,8 +78,10 @@
 
 //=============================================================================
 
-.chart-style {
-  overflow: auto;
+.reduce-status {
+  width    : 40px;
+  height   : 40px;
+  font-size: 40px;
 }
 
 //=============================================================================
