--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,8 +61,8 @@ mat-nested-tree-node .mat-mdc-icon-button.mat-mdc-button-base {
 //=============================================================================
 
 button:not([disabled]) span {
-//  color: #505AF8;
-  color: #F37C40;
+  color: #505AF8;
+//  color: #F37C40;
 }
 
 //=============================================================================
