--- a/src/styles/material.scss
+++ b/src/styles/material.scss
@@ -19,7 +19,7 @@ $app-theme: mat.define-theme((
     tertiary: mat.$blue-palette,
   ),
   typography: (
-    brand-family: 'Comic Sans',
+    brand-family: 'Roboto',
     bold-weight: 900
   ),
   density: (
