--- a/src/app/layout/main-panel/work-panel/inventory/product-data/edit/product-data.edit.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/edit/product-data.edit.html
@@ -2,10 +2,10 @@
   <right-title-panel icon="dataset" title="{{loc('edit')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <input-text-required   #pdNameCtrl     [label]="loc('name')"        [(value)]="pd.name"        [len]="64"></input-text-required><br/>
-    <input-number-required #pdIncremCtrl   [label]="loc('increment')"   [(value)]="pd.increment"   [min]="0.00000001" [max]="1"></input-number-required><br/>
-    <select-text-required  #pdMarketCtrl   [label]="loc('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-text-required><br/>
-    <select-text-required  #pdProductCtrl  [label]="loc('productType')" [(key)]  ="pd.productType" [map]="products"></select-text-required><br/>
+    <input-text-required   #pdNameCtrl     [label]="mod('name')"        [(value)]="pd.name"        [len]="64"></input-text-required><br/>
+    <input-number-required #pdIncremCtrl   [label]="mod('increment')"   [(value)]="pd.increment"   [min]="0.00000001" [max]="1"></input-number-required><br/>
+    <select-text-required  #pdMarketCtrl   [label]="mod('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-text-required><br/>
+    <select-text-required  #pdProductCtrl  [label]="mod('productType')" [(key)]  ="pd.productType" [map]="products"></select-text-required><br/>
   </div>
 
   <div class="buttons-layout">
