--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.html
@@ -2,20 +2,29 @@
   <right-title-panel icon="currency_exchange" title="{{loc('new')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <select-text-required  #pbConnCtrl         [label]="loc('connection')"   [(key)]  ="pb.connectionId" keyField="id" valueField="name" [list]="connections"></select-text-required><br/>
-    <input-text-required   #pbSymbolCtrl       [label]="loc('symbol')"       [(value)]="pb.symbol"       [len]="16"></input-text-required><br/>
-    <input-text-required   #pbNameCtrl         [label]="loc('name')"         [(value)]="pb.name"         [len]="64"></input-text-required><br/>
-    <input-number-required #pbPointValueCtrl   [label]="loc('pointValue')"   [(value)]="pb.pointValue"   [min]="0"></input-number-required><br/>
-    <input-number-required #pbCostPerTradeCtrl [label]="loc('costPerTrade')" [(value)]="pb.costPerTrade" [min]="0"></input-number-required><br/>
-    <input-number-required #pbMarginValueCtrl  [label]="loc('marginValue')"  [(value)]="pb.marginValue"  [min]="0"></input-number-required><br/>
-    <select-text-required  #pbMarketCtrl       [label]="loc('marketType')"   [(key)]  ="pb.marketType"   [map]="markets"></select-text-required><br/>
-    <select-text-required  #pbProductCtrl      [label]="loc('productType')"  [(key)]  ="pb.productType"  [map]="products"></select-text-required><br/>
-    <select-text-required  #pbExchangeCtrl     [label]="loc('exchange')"     [(key)]  ="pb.exchangeId"   keyField="id" valueField="code" [list]="exchanges"></select-text-required>
+    <select-text-required  #pbConnCtrl keyField="id" valueField="name"
+                           [label]="mod('connectionCode')"
+                           [(key)]  ="pb.connectionId"
+                           [list]="connections"
+                           (keyChange)="onConnectionChange($event)"></select-text-required><br/>
+    <br/>
+    <div *ngIf="status == Status.Local">
+      <input-text-required   #pbSymbolCtrl       [label]="mod('symbol')"         [(value)]="pb.symbol"       [len]="16"></input-text-required><br/>
+      <input-text-required   #pbNameCtrl         [label]="mod('name')"           [(value)]="pb.name"         [len]="64"></input-text-required><br/>
+      <input-number-required #pbPointValueCtrl   [label]="mod('pointValue')"     [(value)]="pb.pointValue"   [min]="0"></input-number-required><br/>
+      <input-number-required #pbCostPerTradeCtrl [label]="mod('costPerTrade')"   [(value)]="pb.costPerTrade" [min]="0"></input-number-required><br/>
+      <input-number-required #pbMarginValueCtrl  [label]="mod('marginValue')"    [(value)]="pb.marginValue"  [min]="0"></input-number-required><br/>
+      <input-number-required #pbIncrementCtrl    [label]="mod('increment')"      [(value)]="pb.increment"    [min]="0.00000001" [max]="1"></input-number-required><br/>
+      <select-text-required  #pbMarketCtrl       [label]="mod('marketType')"     [(key)]  ="pb.marketType"   [map]="markets"></select-text-required><br/>
+      <select-text-required  #pbProductCtrl      [label]="mod('productType')"    [(key)]  ="pb.productType"  [map]="products"></select-text-required><br/>
+      <select-text-required  #pbExchangeCtrl     [label]="mod('exchangeCode')"   [(key)]  ="pb.exchangeId"   keyField="id" valueField="code" [list]="exchanges"></select-text-required>
+    </div>
   </div>
 
   <div class="buttons-layout">
     <mat-divider></mat-divider>
     <button mat-button (click)="onSave()" [disabled]="!saveEnabled()">{{button("save")}}</button>
+    <button mat-button (click)="onPresets()" [disabled]="status != Status.Local">{{button("presets")}}</button>
     <button mat-button (click)="onClose()">{{button("cancel")}}</button>
   </div>
 </div>
