The bias analyzer's basic functionalities are complete

--- a/src/app/component/form/instrument-selector/instrument-selector.panel.html
+++ b/src/app/component/form/instrument-selector/instrument-selector.panel.html
@@ -1,6 +1,6 @@
 <mat-form-field class="main-panel">
   <mat-label>{{loc("message")}}</mat-label>
-  <input matInput type="text" [(ngModel)]="value" disabled="true">
+  <input matInput type="text" [(ngModel)]="text" disabled="true" class="input-width">
   <button matSuffix mat-icon-button (click)="onSearch()">
     <mat-icon>search</mat-icon>
   </button>
