--- a/src/app/component/form/select-required/select-text-required.scss
+++ b/src/app/component/form/select-required/select-text-required.scss
@@ -7,7 +7,13 @@
 //=============================================================================
 
 .main-layout {
-  width: 300px;
+  width: 100%;
+}
+
+//=============================================================================
+
+.component-layout {
+  width: 100%;
 }
 
 //=============================================================================
