Added bias backtesting capability

--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
@@ -4,6 +4,7 @@
   <div>
     <button mat-button (click)="onUploadClick()">{{button("upload")}}</button>
     <button mat-button (click)="onChartClick()" [disabled]="disChart">{{button("chart")}}</button>
+    <button mat-button (click)="onDataClick()"  [disabled]="disData">{{button("data")}}</button>
   </div>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
