Added session definition and started to use session into bias backtesting

--- a/src/app/component/form/file-uploader/file-uploader.scss
+++ b/src/app/component/form/file-uploader/file-uploader.scss
@@ -7,11 +7,11 @@
 //=== found in the LICENSE file
 //=============================================================================
 
-
 .file-uploader {
   background-color: #FFF8F4;
   border: 2px dashed #F37C40;
   padding: 3rem;
+  width: inherit;
 }
 
 //=============================================================================
