--- a/src/app/component/form/instrument-selector/instrument-selector.panel.scss
+++ b/src/app/component/form/instrument-selector/instrument-selector.panel.scss
@@ -7,7 +7,7 @@
 //=============================================================================
 
 .main-panel {
-  width: 100%;
+  width: inherit;
 }
 
 //=============================================================================
