--- a/src/app/layout/main-panel/work-panel/admin/connection/edit/edit.panel.html
+++ b/src/app/layout/main-panel/work-panel/admin/connection/edit/edit.panel.html
@@ -4,7 +4,7 @@
   <div class="form-layout">
     <div>
       <input-text-required #connCodeCtrl [(value)]="conn.code" [label]="loc('code')" [len]="8"></input-text-required>
-      &nbsp;
+      <br/>&nbsp;
       <input-text-required #connNameCtrl [(value)]="conn.name" [label]="loc('name')" [len]="32"></input-text-required>
     </div>
 
