--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.scss
@@ -32,3 +32,9 @@
 }
 
 //=============================================================================
+
+input-text-required, select-text-required, input-number-required {
+  width: 100%;
+}
+
+//=============================================================================
