--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.scss
@@ -18,3 +18,14 @@ table tr th {
 
 //=============================================================================
 
+table tr td  {
+  text-align: left;
+}
+
+//=============================================================================
+
+.value-style {
+  margin-right: 4px;
+}
+
+//=============================================================================
