--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/analyze/bias-analysis.playground.scss
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/analyze/bias-analysis.playground.scss
@@ -103,13 +103,7 @@
 
 //=============================================================================
 
-.value-style {
-  text-align: right;
-}
-
-//=============================================================================
-
-.label-style div {
+.label-style {
   width: 30%;
   text-align: left;
 }
@@ -127,6 +121,26 @@
 .money-style {
   width: 10%;
   text-align: left;
+}
+
+//=============================================================================
+//=== Backtest layouts
+//=============================================================================
+
+.backtest-layout {
+
+}
+
+//=============================================================================
+
+.session-style {
+  width: 350px;
+}
+
+//=============================================================================
+
+div input-number-required {
+  margin-right: 4px;
 }
 
 //=============================================================================
