--- a/src/app/component/form/chip-text-set/chip-set-text.scss
+++ b/src/app/component/form/chip-text-set/chip-set-text.scss
@@ -7,7 +7,7 @@
 //=============================================================================
 
 .main-layout {
-  width: 100%;
+//  width: 100%;
 }
 
 //=============================================================================
