--- a/src/app/component/form/date-picker/date-picker.scss
+++ b/src/app/component/form/date-picker/date-picker.scss
@@ -7,7 +7,7 @@
 //=============================================================================
 
 .main-layout {
-  width: 300px;
+  width: inherit;
 }
 
 //=============================================================================
