--- a/src/app/component/form/input-integer-required/input-number-required.scss
+++ b/src/app/component/form/input-integer-required/input-number-required.scss
@@ -7,7 +7,7 @@
 //=============================================================================
 
 .main-layout {
-  width: 300px;
+  width: inherit;
 }
 
 //=============================================================================
