--- a/src/app/component/form/select-required/select-text-required.scss
+++ b/src/app/component/form/select-required/select-text-required.scss
@@ -7,13 +7,12 @@
 //=============================================================================
 
 .main-layout {
-  width: 100%;
+  width: inherit;
 }
 
 //=============================================================================
 
 .component-layout {
-  width: 100%;
 }
 
 //=============================================================================
