--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
@@ -9,7 +9,7 @@
     <input-number-required #pbIncrementCtrl    [label]="mod('increment')"    [(value)]="pb.increment"    [min]="0.00000001" [max]="1"></input-number-required><br/>
     <select-text-required  #pbMarketCtrl       [label]="mod('marketType')"   [(key)]  ="pb.marketType"  [map]="markets"></select-text-required><br/>
     <select-text-required  #pbProductCtrl      [label]="mod('productType')"  [(key)]  ="pb.productType" [map]="products"></select-text-required><br/>
-    <select-text-required  #pbExchangeCtrl     [label]="mod('exchange')"     [(key)]  ="pb.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-text-required>
+    <select-text-required  #pbExchangeCtrl     [label]="mod('exchangeCode')" [(key)]  ="pb.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-text-required>
   </div>
 
   <div class="buttons-layout">
