--- a/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.scss
@@ -32,3 +32,9 @@
 }
 
 //=============================================================================
+
+input-text-required, select-text-required, input-number-required {
+  width: 100%;
+}
+
+//=============================================================================
