--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.html
@@ -28,9 +28,9 @@
       <td>
         <input-number-required *ngIf="!options.posProDays.enabled" [(value)]="options.posProDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -48,9 +48,9 @@
       <td>
         <input-number-required *ngIf="!options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.curValue" [label]="loc('curValue')" [min]="1" [max]="600"></input-number-required>
 
-        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.minValue" [label]="loc('minValue')" [min]="1" [max]="600"></input-number-required>
-        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="600"></input-number-required>
-        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.step"     [label]="loc('step')"     [min]="1" [max]="600"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.minValue" [label]="loc('minValue')" [min]="1" [max]="600"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="600"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.step"     [label]="loc('step')"     [min]="1" [max]="600"></input-number-required>
       </td>
     </tr>
 
@@ -68,9 +68,9 @@
       <td>
         <input-number-required *ngIf="!options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -88,9 +88,9 @@
       <td>
         <input-number-required *ngIf="!options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="150"></input-number-required>
 
-        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="150"></input-number-required>
-        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="150"></input-number-required>
-        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.step"     [label]="loc('step')"     [min]="1" [max]="150"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="150"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="150"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.step"     [label]="loc('step')"     [min]="1" [max]="150"></input-number-required>
       </td>
     </tr>
 
@@ -108,9 +108,9 @@
       <td>
         <input-number-required *ngIf="!options.winPercDays.enabled" [(value)]="options.winPercDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -128,9 +128,9 @@
       <td>
         <input-number-required *ngIf="!options.winPercPerc.enabled" [(value)]="options.winPercPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="100"></input-number-required>
 
-        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="100"></input-number-required>
-        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="100"></input-number-required>
-        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.step"     [label]="loc('step')"     [min]="1" [max]="100"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="100"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="100"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.step"     [label]="loc('step')"     [min]="1" [max]="100"></input-number-required>
       </td>
     </tr>
 
@@ -148,9 +148,9 @@
       <td>
         <input-number-required *ngIf="!options.equAvgDays.enabled" [(value)]="options.equAvgDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
-        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required class ="value-style" *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
