--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/edit/bias-analysis.edit.scss
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/edit/bias-analysis.edit.scss
@@ -38,3 +38,9 @@
 }
 
 //=============================================================================
+
+input-text-required, instrument-selector, select-text-required {
+  width: 100%;
+}
+
+//=============================================================================
