--- a/src/app/component/panel/flex-table/flex-table.panel.scss
+++ b/src/app/component/panel/flex-table/flex-table.panel.scss
@@ -11,8 +11,8 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  align-items: stretch;
-  gap: 0;
+  align-items: center;
+  gap: 8px;
 }
 
 //-----------------------------------------------------------------------------
