--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/bias-analysis.list.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/bias-analysis.list.html
@@ -2,10 +2,10 @@
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
   <div>
-    <button mat-button (click)="onCreateClick()"  [disabled]="disCreate">{{button("create")}}</button>
-    <button mat-button (click)="onViewClick()"    [disabled]="disView">{{button("view")}}</button>
-    <button mat-button (click)="onEditClick()"    [disabled]="disEdit">{{button("edit")}}</button>
-    <button mat-button (click)="onAnalyzeClick()" [disabled]="disAnal">{{button("analyze")}}</button>
+    <button mat-button (click)="onCreateClick()"     [disabled]="disCreate">{{button("create")}}</button>
+    <button mat-button (click)="onViewClick()"       [disabled]="disView">{{button("view")}}</button>
+    <button mat-button (click)="onEditClick()"       [disabled]="disEdit">{{button("edit")}}</button>
+    <button mat-button (click)="onPlaygroundClick()" [disabled]="disPlay">{{button("playground")}}</button>
   </div>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
